--- a/TinnRcom/DESCRIPTION
+++ b/TinnRcom/DESCRIPTION
@@ -1,13 +1,13 @@
 Package: TinnRcom
 Type: Package
 Title: Resources of Tinn-R GUI/Editor for R Environment
-Version: 1.0-15
-Date: 2014-01-15
+Version: 1.0.16
+Date: 2015-03-11
 Author: José Cláudio Faria <joseclaudio.faria@gmail.com>, based on the
         sources of Philippe Grosjean <phgrosjean@sciviews.org> and vimcom
         of Jakson A. de Aquino <jalvesaq@gmail.com>
 Maintainer: José Cláudio Faria <joseclaudio.faria@gmail.com>
-Depends: R (>= 2.6.0), utils, svSocket, formatR, R2HTML, Hmisc
+Depends: R (>= 2.6.0), svSocket, formatR
 Description: Implements a set of customized functions, inspired from svFamily
              packages of Philippe Grosjean and co-authors, as soon as 
              vimcom of Jakson A. de Aquino, necessary to 
