--- a/TinnRcom.Rcheck/TinnRcom/DESCRIPTION
+++ b/TinnRcom.Rcheck/TinnRcom/DESCRIPTION
@@ -15,3 +15,4 @@ Description: Implements a set of customized functions, inspired from svFamily
 License: GPL (>= 2)
 OS_type: windows
 Encoding: latin1
+Built: R 3.1.3; ; 2015-04-27 02:20:08 UTC; windows
